--- a/.src/FMain.form
+++ b/.src/FMain.form
@@ -184,19 +184,19 @@
     }
   }
   { FrameTexto Frame
-    MoveScaled(1,39,52,11)
+    MoveScaled(0,46,52,11)
     Visible = False
     Background = &H007FFF&
     Text = ("Escriba el texto.") & "..."
     { ButtonTextoOK Button
-      MoveScaled(39,1,6,4)
+      MoveScaled(45,1,6,4)
       Picture = Picture["icon:/16/apply"]
     }
     { ColorButtonColorBotonTexto ColorButton
-      MoveScaled(21,1,6,4)
+      MoveScaled(28,1,6,4)
     }
     { ButtonTeclado Button
-      MoveScaled(30,1,7,4)
+      MoveScaled(36,1,7,4)
       Picture = Picture["control/teclado.jpg"]
     }
     { ToolButtonDesplazaTeclado ToolButton
@@ -206,6 +206,14 @@
     }
     { TextBoxTexto TextBox
       MoveScaled(1,6,50,4)
+    }
+    { ValueBoxTamanoTexto ValueBox
+      MoveScaled(19,1,8,4)
+      Text = ("30")
+    }
+    { Label1 Label
+      MoveScaled(10,1,7,4)
+      Text = ("Tamaño:")
     }
   }
   { HBoxWebCam Panel
@@ -226,7 +234,7 @@
     { PictureBoxRedimensionaWebcam PictureBox
       MoveScaled(24,18,6,6)
       Visible = False
-      Picture = Picture["cambiarSize.png"]
+      Picture = Picture.Load("cambiarSize.png")
     }
   }
   { TimerWebcam #Timer
