--- a/.src/FormAcercaDE.form
+++ b/.src/FormAcercaDE.form
@@ -34,8 +34,8 @@
     Picture = Picture["pintascreen32.png"]
     { Labelversion Label
       MoveScaled(11,19,38,3)
-      Text = ("Label1")
       Alignment = Align.Center
+      Text = ("Label1")
     }
     { TextLabel1 TextLabel
       MoveScaled(12,8,38,6)
@@ -53,23 +53,23 @@
       MoveScaled(15,24,30,5)
       Font = Font["Underline"]
       Foreground = &H0000FF&
-      Text = ("http://minino.galpon.org/")
       Alignment = Align.Center
+      Text = ("http://minino.galpon.org/")
     }
     { LabelUrlJsbsan Label
       MoveScaled(15,31,30,5)
       Font = Font["Underline"]
       Foreground = &H0000FF&
-      Text = ("http://www.jsbsan.blogspot.com")
       Alignment = Align.Center
+      Text = ("http://www.jsbsan.blogspot.com")
     }
     { PictureBox1 PictureBox
       MoveScaled(1,1,18,14)
-      Picture = Picture["pintaScreen.png"]
+      Picture = Picture.Load("pintaScreen.png")
     }
     { PictureBox2 PictureBox
       MoveScaled(46,1,12,13)
-      Picture = Picture["icon:/96/gambas"]
+      Picture = Picture.Load("icon:/96/gambas")
       Stretch = True
     }
     { ButtonTeclas Button
@@ -85,8 +85,8 @@
       Text = ("WebCam")
       { Label5 Label
         MoveScaled(1,3,12,3)
-        Text = ("Dispositivo:")
         Alignment = Align.Right
+        Text = ("Dispositivo:")
       }
       { TextBoxDispositivo TextBox
         MoveScaled(15,3,15,3)
@@ -111,24 +111,24 @@
     Picture = Picture["icon:/16/text-strike"]
     { Label2 Label
       MoveScaled(6,8,20,4)
-      Text = ("Ancho Letra:")
       Alignment = Align.Right
+      Text = ("Ancho Letra:")
     }
     { SpinBoxLetra SpinBox
       MoveScaled(27,8,8,4)
     }
     { Label3 Label
       MoveScaled(5,15,21,4)
-      Text = ("Ancho Subrayador:")
       Alignment = Align.Right
+      Text = ("Ancho Subrayador:")
     }
     { SpinBoxSubrayador SpinBox
       MoveScaled(27,15,8,4)
     }
     { Label11 Label
       MoveScaled(2,23,24,3)
-      Text = ("Borrar todo ¿preguntar?:")
       Alignment = Align.Right
+      Text = ("Borrar todo ¿preguntar?:")
     }
     { ComboBoxPreguntarBorrado ComboBox
       MoveScaled(27,22,10,4)
@@ -203,8 +203,8 @@
     }
     { Label10 Label
       MoveScaled(5,17,15,5)
-      Text = ("Nombre:")
       Alignment = Align.Right
+      Text = ("Nombre:")
     }
     { TextBoxNombreArchivoGuardar TextBox
       MoveScaled(21,17,35,5)
